--- a/index.html
+++ b/index.html
@@ -555,7 +555,10 @@
 </blockquote>
 <ol>
 <li>
-<h3><a href="http://risingsun517.github.io/server">RSJEMC生存服务器↗</a></h3>
+<h3>
+  <!-- <a href="http://risingsun517.github.io/server">RSJEMC生存服务器↗</a> -->
+  <a href="./server/index.html">RSJEMC生存服务器↗</a>
+</h3>
 </li>
 </ol>
 
