--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
 <li>
 <h3>
   <!-- <a href="http://risingsun517.github.io/server">RSJEMC生存服务器↗</a> -->
-  <a href="./mcserver">RSJEMC生存服务器↗</a>
+  <a href="mcserver/index.html">RSJEMC生存服务器↗</a>
 </h3>
 </li>
 </ol>
