--- a/mcserver/index.html
+++ b/mcserver/index.html
@@ -549,7 +549,7 @@
       </head>
       <body>
         <article class="markdown-body">
-          <p><a href="./">←滚回主页</a></p>
+          <p><a href="/index.html">←滚回主页</a></p>
 <h1>RSJEMC 纯生存服务器</h1>
 <blockquote>
 <h3>服务器地址：</h3>
@@ -567,11 +567,11 @@
 <p><em><s>没啥好介绍的，反正没人玩。</s></em></p>
 <p><code>¯\_(ツ)_/¯</code></p>
 <h2><span id="2">2.服务器截图</span></h2>
-<p><img src="./mcserver/images/1.png" alt="截图" title="主城"></p>
-<p><img src="./mcserver/images/2.png" alt="截图"></p>
-<p><img src="./mcserver/images/3.png" alt="截图"></p>
-<p><img src="./mcserver/images/4.png" alt="截图"></p>
-<p><img src="./mcserver/images/5.png" alt="截图"></p>
+<p><img src="images/1.png" alt="截图" title="主城"></p>
+<p><img src="images/2.png" alt="截图"></p>
+<p><img src="images/3.png" alt="截图"></p>
+<p><img src="images/4.png" alt="截图"></p>
+<p><img src="images/5.png" alt="截图"></p>
 
         </article>
       </body>
