--- a/mcserver/index.html
+++ b/mcserver/index.html
@@ -2,7 +2,7 @@
       <html>
       <head>
         <meta charset="utf-8"/>
-        <title>RSJEMC</title>
+        <title>RSJEMC生存服务器</title>
         
         <style>
           html, body { margin: 0; padding: 0; background-color: #ffffff; }
