--- a/404.html
+++ b/404.html
@@ -550,7 +550,7 @@
       <body>
         <article class="markdown-body">
           <br/>
-<h3><mark>404啦¯_(ツ)_/¯</mark></h3>
+<h3><mark>404啦¯\_(ツ)_/¯</mark></h3>
 <p>== 404 Not Found==</p>
 <hr>
 <h3><strong><u>好好看看你输入的什么逼玩意</u></strong></h3>
