--- a/mcserver/index.html
+++ b/mcserver/index.html
@@ -549,7 +549,7 @@
       </head>
       <body>
         <article class="markdown-body">
-          <p><a href="/index.html">←滚回主页</a></p>
+          <p><a href="/index.html">←返回主页</a></p>
 <h1>RSJEMC 纯生存服务器</h1>
 <blockquote>
 <h3>服务器地址：</h3>
@@ -572,6 +572,7 @@
 <p><img src="images/3.png" alt="截图"></p>
 <p><img src="images/4.png" alt="截图"></p>
 <p><img src="images/5.png" alt="截图"></p>
+<p><a href="#top">⤒返回顶部</a></p>
 
         </article>
       </body>
