--- a/mcserver/index.html
+++ b/mcserver/index.html
@@ -572,7 +572,7 @@
 <p><img src="images/3.png" alt="截图"></p>
 <p><img src="images/4.png" alt="截图"></p>
 <p><img src="images/5.png" alt="截图"></p>
-<p><a href="#top">⤒返回顶部</a></p>
+<p><a href="#to">⤒返回顶部</a></p>
 
         </article>
       </body>
