更新主页及返回顶部标签

--- a/index.html
+++ b/index.html
@@ -551,16 +551,16 @@
         <article class="markdown-body">
           <h1>嗨害嗨</h1>
 <blockquote>
-<h2>不知道写啥</h2>
+<h3>不知道写啥</h3>
 </blockquote>
+<h2>网站导航🧭</h2>
 <ol>
 <li>
-<h3>
-  <!-- <a href="http://risingsun517.github.io/server">RSJEMC生存服务器↗</a> -->
-  <a href="mcserver/index.html">RSJEMC生存服务器↗</a>
-</h3>
+<h3><a href="mcserver/index.html">RSJEMC生存服务器↗</a></h3>
 </li>
 </ol>
+<hr>
+<p><a href="#top">⤒返回顶部</a></p>
 
         </article>
       </body>
