Update index 亿些细节上的修改

--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
         <article class="markdown-body">
           <h1>嗨害嗨</h1>
 <blockquote>
-<h3>不知道写啥</h3>
+<h3 style="font-size: 16px;">不知道写啥</h3>
 </blockquote>
 <h2>网站导航🧭</h2>
 <ol>
@@ -560,7 +560,7 @@
 </li>
 </ol>
 <hr>
-<p><a href="#top"><strong>⤒返回顶部</strong></a> <a href="https://github.com/risingsun517/risingsun517.github.io">↗直击本仓库(risingsun517/risingsun517.github.io)</a></p>
+<p><a href="#top" style="font-size: 20px;"><strong>⤒返回顶部</strong></a> <a href="https://github.com/risingsun517/risingsun517.github.io">↗直击本仓库(risingsun517/risingsun517.github.io)</a></p>
 
         </article>
       </body>
