--- a/mcserver/index.html
+++ b/mcserver/index.html
@@ -14,7 +14,7 @@
   line-height: 1.5;
   color: #24292e;
   font-family: system-ui, -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.5;
   word-wrap: break-word;
 }
@@ -549,30 +549,40 @@
       </head>
       <body>
         <article class="markdown-body">
-          <p><a href="/index.html"><strong>←返回主页</strong></a></p>
+          <p><u><a href="/index.html" style="font-size: 20px"><strong>←返回主页</strong></a></u></p>
 <h1>RSJEMC 纯生存服务器</h1>
 <blockquote>
 <h3>服务器地址：</h3>
 <ul>
 <li>Java端：<s><code>127.0.0.1</code></s></li>
-<li>Bedrock端：<s><code>127.0.0.1:19132</code></s></li>
+<li>Bedrock端：<s><code>127.0.0.1:19132</code></s>
+<blockquote>
+<p>适用版本：<mark><strong>1.20.1</strong></mark></p>
+</blockquote>
+</li>
 </ul>
 </blockquote>
-<p><strong>快速前往</strong></p>
+<p style="font-size: 20px;"><strong>快速前往</strong></p>
 <ol>
 <li><a href="#1">服务器介绍</a></li>
 <li><a href="#2">服务器截图</a></li>
 </ol>
 <h2><span id="1">1.服务器介绍</span></h2>
-<p><em><s>没啥好介绍的，反正没人玩。</s></em></p>
-<p><code>¯\_(ツ)_/¯</code></p>
+<p><s><em>没啥好介绍的，反正没人玩。</em></s>¯\(ツ)/¯</p>
+<p>Java端Minecraft游戏服务器，支持基岩版互通。</p>
+<p>玩法：纯生存</p>
+<p>（主城有新手礼包，萌新玩家可领，老玩家随意）</p>
+<p><mark>不要开挂！！开挂者封禁！</mark></p>
 <h2><span id="2">2.服务器截图</span></h2>
-<p><img src="images/1.png" alt="截图" title="主城"></p>
-<p><img src="images/2.png" alt="截图"></p>
-<p><img src="images/3.png" alt="截图"></p>
-<p><img src="images/4.png" alt="截图"></p>
-<p><img src="images/5.png" alt="截图"></p>
-<p><a href="#top"><strong>⤒返回顶部</strong></a></p>
+<figure >
+  <img src="images/1.png" alt="服务器截图1" title="主城">
+  <img src="images/2.png" alt="服务器截图2" title="平原&水池">
+  <img src="images/3.png" alt="服务器截图3" title="盆地&村庄">
+  <img src="images/4.png" alt="服务器截图4" title="沉船&丛林">
+  <img src="images/5.png" alt="服务器截图5" title="高原&樱花林">
+</figure>
+<hr>
+<p><a href="#top" style="font-size: 20px"><strong>⤒返回顶部</strong></a></p>
 
         </article>
       </body>
