--- a/mcserver/index_beta2.html
+++ b/mcserver/index_beta2.html
@@ -10,7 +10,7 @@
           var zoom_fp = 10;
         </script>
         <style>
-          html, body { margin: 0; padding: 0; background-color: #ffffff; zoom: "zoom_fp";}
+          html, body { margin: 0; padding: 0; background-color: #ffffff; zoom: (zoom_fp);}
           .markdown-body { box-sizing: border-box; min-width: 200px; max-width: 980px; margin: 0 auto; padding: 45px; }
           @media (max-width: 767px) { .markdown-body { padding: 15px; } }
           .markdown-body {
