--- a/404.html
+++ b/404.html
@@ -14,7 +14,16 @@
   line-height: 1.5;
   color: #24292e;
   font-family: system-ui, -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;;
-  font-size: 32px;
+  /* 横屏 */
+  @media screen and (orientation: landscape) {
+    /* background-color: #ffc7c7; */
+    font-size: 32px;
+  }
+  /* 竖屏 */
+  @media screen and (orientation: portrait) {
+    /* background-color: #c7efff; */
+    font-size: 64px;
+  }
   line-height: 1.5;
   word-wrap: break-word;
 }
