--- a/mcserver/index.html
+++ b/mcserver/index.html
@@ -14,7 +14,16 @@
   line-height: 1.5;
   color: #24292e;
   font-family: system-ui, -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;;
-  font-size: 18px;
+  /* 横屏 */
+  @media screen and (orientation: landscape) {
+    /* background-color: #ffc7c7; */
+    font-size: 16px;
+  }
+  /* 竖屏 */
+  @media screen and (orientation: portrait) {
+    /* background-color: #c7efff; */
+    font-size: 32px;
+  }
   line-height: 1.5;
   word-wrap: break-word;
 }
@@ -549,7 +558,7 @@
       </head>
       <body>
         <article class="markdown-body">
-          <p><u><a href="/index.html" style="font-size: 20px"><strong>←返回主页</strong></a></u></p>
+          <p><u><a href="/index.html" style="font-size: 1.1em"><strong>←返回主页</strong></a></u></p>
 <h1>RSJEMC 纯生存服务器</h1>
 <blockquote>
 <h3>服务器地址：</h3>
@@ -562,7 +571,7 @@
 </li>
 </ul>
 </blockquote>
-<p style="font-size: 20px;"><strong>快速前往</strong></p>
+<p style="font-size: 1.2em;"><strong>快速前往</strong></p>
 <ol>
 <li><a href="#1">服务器介绍</a></li>
 <li><a href="#2">服务器截图</a></li>
@@ -582,7 +591,7 @@
   <img src="images/5.png" alt="服务器截图5" title="高原&樱花林">
 </figure>
 <hr>
-<p><a href="#top" style="font-size: 20px"><strong>⤒返回顶部</strong></a></p>
+<p><a href="#top" style="font-size: 1.1em"><strong>⤒返回顶部</strong></a></p>
 
         </article>
       </body>
