Update mcserver index 细节修改

--- a/mcserver/index.html
+++ b/mcserver/index.html
@@ -551,7 +551,7 @@
 
 .markdown-body mark {
   display: inline-flex;
-  background-color: #fff8c5;
+  background-color: #ffef78;
 }
           
         </style>
@@ -581,7 +581,7 @@
 <p>Java端Minecraft游戏服务器，支持基岩版互通。</p>
 <p>玩法：纯生存</p>
 <p>（主城有新手礼包，萌新玩家可领，老玩家随意）</p>
-<p><mark>不要开挂！！开挂者封禁！</mark></p>
+<p><mark style="background-color: #ff000074;">不要开挂！！开挂者封禁！</mark></p>
 <h2><span id="2">2.服务器截图</span></h2>
 <figure >
   <img src="images/1.png" alt="服务器截图1" title="主城">
