--- a/mcserver/banned-players/index.html
+++ b/mcserver/banned-players/index.html
@@ -2,7 +2,7 @@
       <html>
       <head>
         <meta charset="utf-8"/>
-        <title>RSJEMC生存服务器</title>
+        <title>RSJEMC黑名单</title>
         
         <style>
           html, body { margin: 0; padding: 0; background-color: #ffffff; }
@@ -551,55 +551,23 @@
 
 .markdown-body mark {
   display: inline-flex;
-  background-color: #ffef78;
+  background-color: #fff8c5;
 }
           
         </style>
       </head>
       <body>
         <article class="markdown-body">
-          <p><u><a href="/index.html" style="font-size: 1.1em"><strong>←返回主页</strong></a></u></p>
-<h1>RSJEMC 纯生存服务器</h1>
-<p style="font-size: 1.2em;"><strong>快速前往</strong></p>
+          <p><u><a href="/mcserver/index.html" style="font-size: 1.1em;"><strong>←返回</strong></a></u></p>
+<h2>黑名单</h2>
+<p><em><strong>此处显示被封禁的玩家：</strong></em></p>
 <ol>
-<li><a href="#1">服务器介绍</a></li>
-<li><a href="#2">服务器截图</a></li>
-<li><a href="#3">如何加入本服务器？</a>
-<ol>
-<li><a href="#3"><strong>服务器的版本及IP地址</strong></a></li>
+<li><code>Bunger</code>: Banned by an operator.</li>
+<li><code>matscan</code>: Banned by an operator.</li>
+<li><code>Herobrine</code>: Banned by an operator.</li>
 </ol>
-</li>
-<li><a href="banned-players/index.html">黑名单↗︎</a></li>
-</ol>
-<h2><span id="1">1.服务器介绍</span></h2>
-<p><s><em>没啥好介绍的，反正没人玩。</em></s>¯\(ツ)/¯</p>
-<p>Java端Minecraft游戏服务器，支持基岩版互通，<em>无正版验证(不代表支持盗版)</em>。</p>
-<p>玩法：纯生存</p>
-<p>（主城有新手礼包，萌新玩家可领，老玩家随意）</p>
-<p><mark style="background-color: #ff000074;">不要开挂！！开挂者封禁！</mark></p>
-<h2><span id="2">2.服务器截图</span></h2>
-<figure >
-  <img src="images/1.png" alt="服务器截图1" title="主城">
-  <img src="images/2.png" alt="服务器截图2" title="平原&水池">
-  <img src="images/3.png" alt="服务器截图3" title="盆地&村庄">
-  <img src="images/4.png" alt="服务器截图4" title="沉船&丛林">
-  <img src="images/5.png" alt="服务器截图5" title="高原&樱花林">
-</figure>
-<br/>
-<h2><span id="3">3.如何加入本服务器？</span></h2>
-<p>首先，你需要去分辨你的Minecraft是<a href="https://minecraft.fandom.com/zh/wiki/%E5%9F%BA%E5%B2%A9%E7%89%88"><strong>基岩版(Bedrock Edition)</strong></a>还是<a href="https://minecraft.fandom.com/zh/wiki/Java%E7%89%88"><strong>Java版(Java Edition)</strong></a>。然后根据以下对应的版本和地址进入：</p>
-<blockquote style="color: #ff0000; border-color: #ff0000;">
-<p>注意：服务器地址及开启时间未定！</p>
-</blockquote>
-<h4>Java Edition <u>1.20.1</u>: <s><code>127.0.0.1</code></s></h4>
-<h4>Bedrock Edition <u>1.20.1或更高</u>: <s><code>127.0.0.1:19132</code></s></h4>
-<blockquote>
-<p><a href="https://minecraft.fandom.com/zh/wiki/%E6%95%99%E7%A8%8B/%E5%9C%A8%E6%9C%8D%E5%8A%A1%E5%99%A8%E4%B8%8A%E6%B8%B8%E7%8E%A9">知道了服务器IP地址，怎么游玩?(Java)↗︎</a></p>
-<p><a href="https://minecraft.fandom.com/zh/wiki/%E6%95%99%E7%A8%8B/%E4%B8%8B%E8%BD%BD%E3%80%81%E5%AE%89%E8%A3%85%E4%B8%8E%E8%B4%AD%E4%B9%B0">如何获取Minecraft？↗︎</a></p>
-</blockquote>
 <hr>
-<p><a href="#top" style="font-size: 1.1em"><strong>⤒返回顶部</strong></a></p>
-<p><a href="https://minecraft.fandom.com/zh/wiki/Minecraft_Wiki">↗︎Minecraft Wiki</a></p>
+<p><a href="#top" style="font-size: 1.1em;"><strong>⤒返回顶部</strong></a></p>
 
         </article>
       </body>
