--- a/mcserver/index.html
+++ b/mcserver/index.html
@@ -569,7 +569,7 @@
 <li><a href="#3"><strong>服务器的版本及IP地址</strong></a></li>
 </ol>
 </li>
-<li><a href="banned-players/index.html">黑名单↗︎</a></li>
+<li><a href="banned-players/index.html">黑名单↗</a></li>
 </ol>
 <h2><span id="1">1.服务器介绍</span></h2>
 <p><s><em>没啥好介绍的，反正没人玩。</em></s>¯\(ツ)/¯</p>
@@ -594,12 +594,12 @@
 <h4>Java Edition <u>1.20.1</u>: <s><code>127.0.0.1</code></s></h4>
 <h4>Bedrock Edition <u>1.20.1或更高</u>: <s><code>127.0.0.1:19132</code></s></h4>
 <blockquote>
-<p><a href="https://minecraft.fandom.com/zh/wiki/%E6%95%99%E7%A8%8B/%E5%9C%A8%E6%9C%8D%E5%8A%A1%E5%99%A8%E4%B8%8A%E6%B8%B8%E7%8E%A9">知道了服务器IP地址，怎么游玩?(Java)↗︎</a></p>
-<p><a href="https://minecraft.fandom.com/zh/wiki/%E6%95%99%E7%A8%8B/%E4%B8%8B%E8%BD%BD%E3%80%81%E5%AE%89%E8%A3%85%E4%B8%8E%E8%B4%AD%E4%B9%B0">如何获取Minecraft？↗︎</a></p>
+<p><a href="https://minecraft.fandom.com/zh/wiki/%E6%95%99%E7%A8%8B/%E5%9C%A8%E6%9C%8D%E5%8A%A1%E5%99%A8%E4%B8%8A%E6%B8%B8%E7%8E%A9">知道了服务器IP地址，怎么游玩?(Java)↗</a></p>
+<p><a href="https://minecraft.fandom.com/zh/wiki/%E6%95%99%E7%A8%8B/%E4%B8%8B%E8%BD%BD%E3%80%81%E5%AE%89%E8%A3%85%E4%B8%8E%E8%B4%AD%E4%B9%B0">如何获取Minecraft？↗</a></p>
 </blockquote>
 <hr>
 <p><a href="#top" style="font-size: 1.1em"><strong>⤒返回顶部</strong></a></p>
-<p><a href="https://minecraft.fandom.com/zh/wiki/Minecraft_Wiki">↗︎Minecraft Wiki</a></p>
+<p><a href="https://minecraft.fandom.com/zh/wiki/Minecraft_Wiki">↗Minecraft Wiki</a></p>
 
         </article>
       </body>
