New beta page 新增测试页

--- a/index.html
+++ b/index.html
@@ -571,6 +571,7 @@
 <hr>
 <p><a href="#top" style="font-size: 1.1em;"><strong>⤒返回顶部</strong></a></p>
 <p><a href="https://github.com/risingsun517/risingsun517.github.io">↗直击本仓库(risingsun517/risingsun517.github.io)</a></p>
+<p><a href="beta.html">↗β-beta页面(闲人免进:D)</a></p>
 <hr style="height: .05em;background-color: #d5d5d5aa;">
 <p style="color: #b1b1b1;"><strong>文字太小？</strong>尽管本站努力适配移动端的页面，但经测试仍有一些旧版移动端设备无法适配！</p>
 <p style="color: #b1b1b1;">-解决方案：1.将你的系统和浏览器升级到最新版本。2.将页面缩放调至200%食用。:D</p>
