--- a/mcserver/banned-players/index.html
+++ b/mcserver/banned-players/index.html
@@ -15,12 +15,12 @@
   color: #24292e;
   font-family: system-ui, -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;;
   /* 横屏 */
-  @media screen and (orientation: landscape) {
+  @media only screen and (orientation: landscape) {
     /* background-color: #ffc7c7; */
     font-size: 18px;
   }
   /* 竖屏 */
-  @media screen and (orientation: portrait) {
+  @media only screen and (orientation: portrait) {
     /* background-color: #c7efff; */
     font-size: 36px;
   }
