--- a/beta.html
+++ b/beta.html
@@ -1,7 +1,7 @@
 <!doctype html>
       <html>
       <head>
-        <meta charset="utf-8", name: 'viewport', content: 'width=device-width, initial-scale=1'/>
+        <meta charset="utf-8" id="viewport" name="viewport" content="width=device-width, initial-scale=1"/>
         <title>Beta开发测试</title>
         <link rel="stylesheet" href="./katex.min.css">
         <style>
