Fix pages 修复了辣鸡安卓机等的显示问题（字太小）

--- a/mcserver/banned-players/index.html
+++ b/mcserver/banned-players/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
       <html>
       <head>
-        <meta charset="utf-8"/>
+        <meta charset="utf-8" id="viewport" name="viewport" content="width=device-width, initial-scale=1"/>
         <title>RSJEMC黑名单</title>
         
         <style>
