--- a/mcserver/index.html
+++ b/mcserver/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
       <html>
       <head>
-        <meta charset="utf-8"/>
+        <meta charset="utf-8" id="viewport" name="viewport" content="width=device-width, initial-scale=1"/>
         <title>RSJEMC生存服务器</title>
         
         <style>
