--- a/404.html
+++ b/404.html
@@ -14,16 +14,7 @@
   line-height: 1.5;
   color: #24292e;
   font-family: system-ui, -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;;
-  /* 横屏 */
-  @media screen and (orientation: landscape) {
-    /* background-color: #ffc7c7; */
-    font-size: 32px;
-  }
-  /* 竖屏 */
-  @media screen and (orientation: portrait) {
-    /* background-color: #c7efff; */
-    font-size: 64px;
-  }
+  font-size: 32px;
   line-height: 1.5;
   word-wrap: break-word;
 }
@@ -564,7 +555,7 @@
 <hr>
 <h3><strong><u>好好看看你输入的什么逼玩意</u></strong></h3>
 <p>凸(◐‿◑)凸</p>
-<h4><a href="/index.html"><strong>滚回主页↗</strong></a></h4>
+<h4><a href="index.html"><strong>滚回主页↗</strong></a></h4>
 
         </article>
       </body>
