--- a/beta.html
+++ b/beta.html
@@ -16,16 +16,15 @@
   font-family: system-ui, -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;;
   /* 横屏-蓝背景（android貌似显示不了） */
   @media only screen and (orientation: landscape) {
-    font-size: 18px;
-    background-color: #79d9ff6e;
+    background-color: rgba(119, 237, 255, 0.403);
   }
   /* 竖屏-红背景 （android貌似显示不了）*/
   @media only screen and (orientation: portrait) {
-    font-size: 18px;
-    background-color: #ff00003e;
+    background-color: rgba(249, 117, 117, 0.403);
   }
   /* 无法检测则为绿色 */
-  background-color: #79ff8053;
+  background-color: rgba(119, 255, 146, 0.403);
+  font-size: 18px;
   line-height: 1.5;
   word-wrap: break-word;
 }
