--- a/beta.html
+++ b/beta.html
@@ -20,10 +20,10 @@
   }
   /* 竖屏-红背景 （android貌似显示不了）*/
   @media only screen and (orientation: portrait) {
-    background-color: rgba(249, 117, 117, 0.403);
+    background-color: rgb(249, 117, 117);
   }
   /* 无法检测则为绿色 */
-  background-color: rgba(119, 255, 146, 0.403);
+  background-color: rgb(119, 255, 146);
   font-size: 18px;
   line-height: 1.5;
   word-wrap: break-word;
