--- a/beta.html
+++ b/beta.html
@@ -5,7 +5,7 @@
         <title>Beta开发测试</title>
         <link rel="stylesheet" href="./katex.min.css">
         <style>
-          html, body { margin: 0; padding: 0; background-color: #ffffff; }
+          html, body { margin: 0; padding: 0; background-color: #f0d107bd; }
           .markdown-body { box-sizing: border-box; min-width: 200px; max-width: 980px; margin: 0 auto; padding: 45px; }
           @media (max-width: 767px) { .markdown-body { padding: 15px; } }
           .markdown-body {
@@ -14,16 +14,16 @@
   line-height: 1.5;
   color: #24292e;
   font-family: system-ui, -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;;
-  /* 横屏-蓝背景（android貌似显示不了） */
+  /* 横屏-蓝背景（android13及以下貌似显示不了） */
   @media only screen and (orientation: landscape) {
     background-color: rgba(119, 237, 255, 0.403);
   }
-  /* 竖屏-红背景 （android貌似显示不了）*/
+  /* 竖屏-红背景 （android13及以下貌似显示不了）*/
   @media only screen and (orientation: portrait) {
-    background-color: rgb(249, 117, 117);
+    background-color: rgba(249, 117, 117, 0.403);
   }
-  /* 无法检测则为绿色 */
-  background-color: rgb(119, 255, 146);
+  /* 无法检测则为绿色（android13及以下貌似显示不了） */
+  background-color: rgba(119, 255, 146, 0.403);
   font-size: 18px;
   line-height: 1.5;
   word-wrap: break-word;
@@ -563,6 +563,7 @@
           <p style="color: #6d6d6d;line-height: 0%;">@media检测到横屏-蓝色</p>
           <p style="color: #6d6d6d;line-height: 0%;">@media检测到竖屏-红色</p>
           <p style="color: #6d6d6d;line-height: 0%;">@media无法检测横竖屏-绿色</p>
+          <p style="color: #6d6d6d;line-height: 0%;">不支持background-color-白色</p>
           <h1>我是一级标题</h1>
 <h2>我是二级标题</h2>
 <h3>我是三级标题</h3>
