--- a/beta.html
+++ b/beta.html
@@ -5,7 +5,15 @@
         <title>Beta开发测试</title>
         <link rel="stylesheet" href="./katex.min.css">
         <style>
-          html, body { margin: 0; padding: 0; background-color: #f0d107bd; }
+          html, body { 
+            margin: 0; padding: 0; background-color: rgba(119, 255, 146, 0.403);
+          @media only screen and (orientation: landscape) {
+            background-color:rgba(119, 237, 255, 0.403);
+          }
+          @media only screen and (orientation: portrait) {
+           background-color: rgba(249, 117, 117, 0.403);
+          }
+          }
           .markdown-body { box-sizing: border-box; min-width: 200px; max-width: 980px; margin: 0 auto; padding: 45px; }
           @media (max-width: 767px) { .markdown-body { padding: 15px; } }
           .markdown-body {
@@ -15,15 +23,15 @@
   color: #24292e;
   font-family: system-ui, -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;;
   /* 横屏-蓝背景（android13及以下貌似显示不了） */
-  @media only screen and (orientation: landscape) {
+  /* @media only screen and (orientation: landscape) {
     background-color: rgba(119, 237, 255, 0.403);
-  }
+  } */
   /* 竖屏-红背景 （android13及以下貌似显示不了）*/
-  @media only screen and (orientation: portrait) {
+  /* @media only screen and (orientation: portrait) {
     background-color: rgba(249, 117, 117, 0.403);
-  }
+  } */
   /* 无法检测则为绿色（android13及以下貌似显示不了） */
-  background-color: rgba(119, 255, 146, 0.403);
+  /* background-color: rgba(119, 255, 146, 0.403); */
   font-size: 18px;
   line-height: 1.5;
   word-wrap: break-word;
