--- a/beta.html
+++ b/beta.html
@@ -571,8 +571,8 @@
           <p style="color: #6d6d6d;line-height: 10%;">@media检测到横屏-蓝色</p>
           <p style="color: #6d6d6d;line-height: 10%;">@media检测到竖屏-红色</p>
           <p style="color: #6d6d6d;line-height: 10%;">@media无法检测横竖屏-绿色</p>
-          <p style="color: #6d6d6d;line-height: 10%;">(Android13及以下可能会显示为绿色)</p>
-          <p style="color: #6d6d6d;line-height: 10%;">不支持background-color-白色</p>
+          <p style="color: #6d6d6d;line-height: 10%;">(显示为绿色建议更新浏览器)</p>
+          <p style="color: #6d6d6d;line-height: 10%;"><s>不支持background-color-白色</s></p>
           <h1>我是一级标题</h1>
 <h2>我是二级标题</h2>
 <h3>我是三级标题</h3>
