浅改下目录结构

--- a/mcserver/index.html
+++ b/mcserver/index.html
@@ -560,7 +560,7 @@
 <li><a href="#3"><strong>服务器的版本及IP地址</strong></a></li>
 </ol>
 </li>
-<li><a href="banned-players/index.html">黑名单↗</a></li>
+<li><a href="banned-players.html">黑名单↗</a></li>
 </ol>
 <h2><span id="1">1.服务器介绍</span></h2>
 <p><s><em>没啥好介绍的，反正没人玩。</em></s>¯\(ツ)/¯</p>
