--- a/404.html
+++ b/404.html
@@ -555,7 +555,7 @@
 <hr>
 <h3><strong><u>好好看看你输入的什么逼玩意</u></strong></h3>
 <p>凸(◐‿◑)凸</p>
-<h4><a href="https://risingsun517.github.io"><strong>滚回主页↗</strong></a></h4>
+<h4><a href="index.html"><strong>滚回主页↗</strong></a></h4>
 
         </article>
       </body>
