--- a/404.html
+++ b/404.html
@@ -550,12 +550,12 @@
       <body>
         <article class="markdown-body">
           <br/>
-<h3><mark>404啦¯\_(ツ)_/¯</mark></h3>
-<p>== 404 Not Found==</p>
+<h3><mark style="background-color: #ff0000d0;">404啦¯\_(ツ)_/¯</mark></h3>
+<p style="background-color: #fff04771;">==404 Not Found==</p>
 <hr>
-<h3><strong><u>好好看看你输入的什么逼玩意</u></strong></h3>
-<p>凸(◐‿◑)凸</p>
-<h4><a href="index.html"><strong>滚回主页↗</strong></a></h4>
+<h3><strong><u style="color: #11d62b;">好好看看你输入的什么币玩意</u></strong></h3>
+<p style="color: #00000080;">凸(◐‿◑)凸</p>
+<h4><a href="/index.html"><strong>滚回主页↗</strong></a></h4>
 
         </article>
       </body>
