--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
 <hr>
 <p><a href="#top" style="font-size: 1.1em;"><strong>⤒返回顶部</strong></a></p>
 <p><a href="https://github.com/risingsun517/risingsun517.github.io">↗直击本仓库(risingsun517/risingsun517.github.io)</a></p>
-<p><a href="beta.html" style="color: #b1b1b1;">↗β-测试页面(闲人免进:D)</a></p>
+<p><a href="beta/index.html" style="color: #b1b1b1;">↗β-测试页面(闲人免进:D)</a></p>
 
         </article>
       </body>
