--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-      <html>
+      <html lang="zh">
       <head>
         <meta charset="utf-8" id="viewport" name="viewport" content="width=device-width, initial-scale=1"/>
         <title>不欢迎来到risingsun517.github.io</title>
