--- a/beta/blank.html
+++ b/beta/blank.html
@@ -1,8 +1,8 @@
 <!doctype html>
-      <html lang="zh">
+      <html>
       <head>
         <meta charset="utf-8" id="viewport" name="viewport" content="width=device-width, initial-scale=1"/>
-        <title>404 Not Found</title>
+        <title>blank</title>
         
         <style>
           html, body { margin: 0; padding: 0; background-color: #ffffff; }
@@ -14,7 +14,7 @@
   line-height: 1.5;
   color: #24292e;
   font-family: system-ui, -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;;
-  font-size: 32px;
+  font-size: 18px;
   line-height: 1.5;
   word-wrap: break-word;
 }
@@ -549,14 +549,7 @@
       </head>
       <body>
         <article class="markdown-body">
-          <br/>
-<h3><mark style="background-color: #ff0000d0;">404啦¯\_(ツ)_/¯</mark></h3>
-<p style="background-color: #fff04771;">==404 Not Found==</p>
-<hr>
-<h3><strong><u style="color: #11d62b;">好好看看你输入的什么币玩意</u></strong></h3>
-<p style="color: #00000080;">凸(◐‿◑)凸</p>
-<h4><a href="/index.html"><strong>滚回主页↗</strong></a></h4>
-
+          
         </article>
       </body>
       </html>
