modified beta page 背景颜色淡亿点

--- a/beta/index.html
+++ b/beta/index.html
@@ -6,12 +6,12 @@
         <link rel="stylesheet" href="./katex.min.css">
         <style>
           html, body { 
-            margin: 0; padding: 0; background-color: rgba(119, 255, 146, 0.403);
+            margin: 0; padding: 0; background-color: rgb(221, 255, 228);
           @media only screen and (orientation: landscape) {
-            background-color:rgba(119, 237, 255, 0.403);
+            background-color:rgb(226, 251, 255);
           }
           @media only screen and (orientation: portrait) {
-           background-color: rgba(249, 117, 117, 0.403);
+           background-color: rgb(255, 221, 221);
           }
           }
           .markdown-body { box-sizing: border-box; min-width: 200px; max-width: 980px; margin: 0 auto; padding: 45px; }
