为RSJEMC页的图片添加滤镜并缩小大小

--- a/mcserver/index.html
+++ b/mcserver/index.html
@@ -570,11 +570,11 @@
 <p><mark style="background-color: #ff000074;">不要开挂！！开挂者封禁！</mark></p>
 <h2><span id="2">2.服务器截图</span></h2>
 <figure >
-  <img src="images/1.png" alt="服务器截图1" title="主城">
-  <img src="images/2.png" alt="服务器截图2" title="平原&水池">
-  <img src="images/3.png" alt="服务器截图3" title="盆地&村庄">
-  <img src="images/4.png" alt="服务器截图4" title="沉船&丛林">
-  <img src="images/5.png" alt="服务器截图5" title="高原&樱花林">
+  <img src="images/1.jpg" alt="服务器截图1" title="主城">
+  <img src="images/2.jpg" alt="服务器截图2" title="平原&水池">
+  <img src="images/3.jpg" alt="服务器截图3" title="盆地&村庄">
+  <img src="images/4.jpg" alt="服务器截图4" title="沉船&丛林">
+  <img src="images/5.jpg" alt="服务器截图5" title="高原&樱花林">
 </figure>
 <br/>
 <h2><span id="3">3.如何加入本服务器？</span></h2>
