--- a/mcserver/index.html
+++ b/mcserver/index.html
@@ -549,7 +549,7 @@
       </head>
       <body>
         <article class="markdown-body">
-          <p><u><a href="/index.html" style="font-size: 1.1em"><strong>←返回主页</strong></a></u></p>
+          <!-- <p><a href="/index.html" style="font-size: 1.1em"><strong>←返回主页</strong></a></p> -->
 <h1>RSJEMC 纯生存服务器</h1>
 <p style="font-size: 1.2em;"><strong>快速前往</strong></p>
 <ol>
@@ -578,19 +578,19 @@
 </figure>
 <br/>
 <h2><span id="3">3.如何加入本服务器？</span></h2>
-<p>首先，你需要去分辨你的Minecraft是<a href="https://minecraft.fandom.com/zh/wiki/%E5%9F%BA%E5%B2%A9%E7%89%88"><strong>基岩版(Bedrock Edition)</strong></a>还是<a href="https://minecraft.fandom.com/zh/wiki/Java%E7%89%88"><strong>Java版(Java Edition)</strong></a>。然后根据以下对应的版本和地址进入：</p>
+<p>首先，你需要去分辨你的Minecraft是<a href="https://minecraft.fandom.com/zh/wiki/%E5%9F%BA%E5%B2%A9%E7%89%88" target="_blank"><strong>基岩版(Bedrock Edition)</strong></a>还是<a href="https://minecraft.fandom.com/zh/wiki/Java%E7%89%88" target="_blank"><strong>Java版(Java Edition)</strong></a>。然后根据以下对应的版本和地址进入：</p>
 <blockquote style="color: #ff0000; border-color: #ff0000;">
 <p>注意：服务器地址及开启时间未定！</p>
 </blockquote>
 <h4>Java Edition <u>1.20.1</u>: <s><code>127.0.0.1</code></s></h4>
 <h4>Bedrock Edition <u>1.20.1或更高</u>: <s><code>127.0.0.1:19132</code></s></h4>
 <blockquote>
-<p><a href="https://minecraft.fandom.com/zh/wiki/%E6%95%99%E7%A8%8B/%E5%9C%A8%E6%9C%8D%E5%8A%A1%E5%99%A8%E4%B8%8A%E6%B8%B8%E7%8E%A9">知道了服务器IP地址，怎么游玩?(Java)↗</a></p>
-<p><a href="https://minecraft.fandom.com/zh/wiki/%E6%95%99%E7%A8%8B/%E4%B8%8B%E8%BD%BD%E3%80%81%E5%AE%89%E8%A3%85%E4%B8%8E%E8%B4%AD%E4%B9%B0">如何获取Minecraft？↗</a></p>
+<p><a href="https://minecraft.fandom.com/zh/wiki/%E6%95%99%E7%A8%8B/%E5%9C%A8%E6%9C%8D%E5%8A%A1%E5%99%A8%E4%B8%8A%E6%B8%B8%E7%8E%A9" target="_blank">知道了服务器IP地址，怎么游玩?(Java)↗</a></p>
+<p><a href="https://minecraft.fandom.com/zh/wiki/%E6%95%99%E7%A8%8B/%E4%B8%8B%E8%BD%BD%E3%80%81%E5%AE%89%E8%A3%85%E4%B8%8E%E8%B4%AD%E4%B9%B0" target="_blank">如何获取Minecraft？↗</a></p>
 </blockquote>
 <hr>
 <p><a href="#top" style="font-size: 1.1em"><strong>⤒返回顶部</strong></a></p>
-<p><a href="https://minecraft.fandom.com/zh/wiki/Minecraft_Wiki">↗Minecraft Wiki</a></p>
+<p><a href="https://minecraft.fandom.com/zh/wiki/Minecraft_Wiki" target="_blank">↗Minecraft Wiki</a></p>
 
         </article>
       </body>
