--- a/index.html
+++ b/index.html
@@ -555,14 +555,13 @@
 </blockquote>
 <h2>网站导航🧭</h2>
 <ol>
-<li>
-  <h3><a href="mcserver/index.html">RSJEMC生存服务器↗</a></h3>
-</li>
+<li><h3><a href="mcserver/index.html" target="_blank">RSJEMC生存服务器↗</a></h3></li>
+<li><h3><a href="checkrspid/index.html" target="_blank">检验产品识别码(RSPID)🚫</a></h3></li>
 </ol>
 <hr>
 <p><a href="#top" style="font-size: 1.1em;"><strong>⤒返回顶部</strong></a></p>
-<p><a href="https://github.com/risingsun517/risingsun517.github.io">↗直击本仓库(risingsun517/risingsun517.github.io)</a></p>
-<p><a href="beta/index.html" style="color: #b1b1b1;">↗β-测试页面(闲人免进:D)</a></p>
+<p><a href="https://github.com/risingsun517/risingsun517.github.io" target="_blank">↗直击本仓库(risingsun517/risingsun517.github.io)</a></p>
+<p><a href="beta/index.html" style="color: #b1b1b1;" target="_blank">↗β-测试页面(闲人免进:D)</a></p>
 
         </article>
       </body>
