--- a/checkrspid/index.html
+++ b/checkrspid/index.html
@@ -2,7 +2,7 @@
       <html>
       <head>
         <meta charset="utf-8" id="viewport" name="viewport" content="width=device-width, initial-scale=1"/>
-        <title>检验产品识别码(RSPID)</title>
+        <title>验证产品识别码(RSPID)</title>
         
         <style>
           html, body { margin: 0; padding: 0; background-color: #ffffff; }
@@ -550,16 +550,16 @@
       <body>
         <article class="markdown-body">
             <!-- <p><u><a href="/index.html" style="font-size: 1.1em"><strong>←返回主页</strong></a></u></p> -->
-            <h1>产品识别码检验系统</h1>
+            <h1>产品识别码验证系统</h1>
             <p><blockquote style="border-width: 0.16em;">
               示例:<code>51231130152930002619332046011</code>。
               <p style="padding: 0.35em 1.15em; color: #ff4800;">
                 本验证程序适用于2023/09/16及以后的产品识别码(RSPID-29位)。
               </p>
             </blockquote></p>
-            <p><strong style="color:#ff0000;font-size: 2em;">开发中，暂不可用！！</strong></p>
+            <!-- <p><strong style="color:#ff0000;font-size: 2em;">开发中，暂不可用！！</strong></p> -->
             <h4>下方输入RSPID：</h4>
-            <p><input type="text" name="pid" size="29" maxlength="29"> <input type="button" value="验证" onclick="verify()"></p>
+            <p><input type="text" id="pid" size="29" maxlength="29"> <input type="button" value="验证" onclick="verify()"></p>
             <!-- 以下暂不可用 -->
             <strong><p style="line-height: 1em;">状态：<a id="zt"></a></p></strong>
             <p style="line-height: .3em;">类型：<a id="lx"></a></p>
