--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
 <h2>网站导航🧭</h2>
 <ol>
 <li><h3><a href="mcserver/index.html" target="_blank">RSJEMC生存服务器↗</a></h3></li>
-<li><h3><a href="checkrspid/index.html" target="_blank">检验产品识别码(RSPID)↗</a></h3></li>
+<li><h3><a href="checkrspid/index.html" target="_blank">验证产品识别码(RSPID)↗</a></h3></li>
 </ol>
 <blockquote style="background-color: #efefef80; font-size: 0.7em; color: #aaaaaa;">*标注为“🚫”的为未开发完全的页面。</blockquote>
 <hr>
