复制粘贴功能

--- a/checkrspid/createrspid.html
+++ b/checkrspid/createrspid.html
@@ -597,8 +597,9 @@
               <input type="button" value="填充时间" onclick="autoTime()">
               <input type="button" value="填充随机码" onclick="autoRand()">
             </p>
-            <p>
-              <input type="button" value="生成RSPID" onclick="creat()" style="font-size: 1.5em;font-weight: 500;">
+            <p id="button2">
+              <input type="button" value="生成RSPID" onclick="creat()" style="font-size: 1.4em;font-weight: 550;margin-right: 0.5em;">
+              <input type="button" value="复制RSPID" onclick="copy()" style="font-size: 1.4em;font-weight: 400;">
             </p>
             <p>
               结果：
