--- a/checkrspid/index.html
+++ b/checkrspid/index.html
@@ -557,8 +557,8 @@
                 本验证程序适用于2023/09/16及以后的产品识别码(RSPID-29位)。
               </p>
             </blockquote></p>
-            <h4>下方输入RSPID：</h4>
-            <p><input type="text" id="pid" size="29" maxlength="29"> <input type="button" value="验证" onclick="verify()"></p>
+            <h4>下方输入RSPID：<input type="button" value="粘贴" onclick="paste()" style="font-weight: 400;font-size: 1em;margin-left: 1em;"></h4>
+            <p><input type="text" id="pid" size="29" maxlength="29"> <input type="button" value="验证" onclick="verify()" style="font-weight: 500;font-size: 1.1em;margin-left: 0.15em;"></p>
             <strong><p style="line-height: 1em;">状态：<a id="zt"></a></p></strong>
             <p style="line-height: .3em;">类型：<a id="lx"></a></p>
             <p style="line-height: .3em;">品牌：<a id="pp"></a></p>
