apple web app test

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
       <html lang="zh-cmn-Hans">
       <head>
+        <meta name="application-name" content="RSGIT">
+        <meta name="apple-mobile-web-app-capable" content="yes">
         <meta charset="utf-8" id="viewport" name="viewport" content="width=device-width, initial-scale=1"/>
         <title>不欢迎来到risingsun517.github.io</title>
         
