--- a/checkrspid/createrspid.html
+++ b/checkrspid/createrspid.html
@@ -2,6 +2,10 @@
       <html>
       <head>
         <meta charset="utf-8" id="viewport" name="viewport" content="width=device-width, initial-scale=1"/>
+        <!-- iOS web app -->
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <link rel="apple-touch-icon-precomposed" href="icon.png">
+        <meta name="apple-mobile-web-app-status-bar-style" content="default"/>
         <title>生成产品识别码(RSPID)</title>
         
         <style>
