--- a/checkrspid/createrspid.html
+++ b/checkrspid/createrspid.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8" id="viewport" name="viewport" content="width=device-width, initial-scale=1"/>
         <!-- iOS web app -->
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <link rel="apple-touch-icon-precomposed" href="icon2.png">
-        <meta name="apple-mobile-web-app-status-bar-style" content="default"/>
+        <!-- <link rel="apple-touch-icon-precomposed" href="icon2.png"> -->
+        <meta name="apple-mobile-web-app-status-bar-style" content="white"/>
         <title>生成产品识别码(RSPID)</title>
         
         <style>
