--- a/checkrspid/createrspid.html
+++ b/checkrspid/createrspid.html
@@ -5,7 +5,7 @@
         <!-- iOS web app -->
         <meta name="apple-mobile-web-app-capable" content="yes">
         <!-- <link rel="apple-touch-icon-precomposed" href="icon2.png"> -->
-        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
         <title>生成产品识别码(RSPID)</title>
         
         <style>
