--- a/checkrspid/index.html
+++ b/checkrspid/index.html
@@ -563,7 +563,7 @@
             <p style="line-height: .3em;">类型：<a id="lx"></a></p>
             <p style="line-height: .3em;">品牌：<a id="pp"></a></p>
             <p style="line-height: .3em;">型号：<a id="xh"></a></p>
-            <p style="line-height: .3em;">生产时间：<a id="sj"></a></p>
+            <p style="line-height: .3em;">时间：<a id="sj"></a></p>
             <!-- id名为对应拼音首字母：状态，类型，品牌，型号，时间 -->
         </article>
         <script src="checkrspid.js"></script>
