更改网页引用地址 Minecraft Wiki搬迁 增加资助页面（doge

--- a/mcserver/index.html
+++ b/mcserver/index.html
@@ -620,11 +620,11 @@
             <h2><span id="3">3.如何加入本服务器？</span></h2>
             <p>
                 首先，你需要去分辨你的Minecraft是<a
-                    href="https://minecraft.fandom.com/zh/wiki/%E5%9F%BA%E5%B2%A9%E7%89%88"
+                    href="https://zh.minecraft.wiki/wiki/%E5%9F%BA%E5%B2%A9%E7%89%88"
                     target="_blank"
                     ><strong>基岩版(Bedrock Edition)</strong></a
                 >还是<a
-                    href="https://minecraft.fandom.com/zh/wiki/Java%E7%89%88"
+                    href="https://zh.minecraft.wiki/wiki/Java%E7%89%88"
                     target="_blank"
                     ><strong>Java版(Java Edition)</strong></a
                 >。然后根据以下对应的版本和地址进入：
@@ -641,14 +641,14 @@
             <blockquote>
                 <p>
                     <a
-                        href="https://minecraft.fandom.com/zh/wiki/%E6%95%99%E7%A8%8B/%E5%9C%A8%E6%9C%8D%E5%8A%A1%E5%99%A8%E4%B8%8A%E6%B8%B8%E7%8E%A9"
+                        href="https://zh.minecraft.wiki/w/教程/游玩服务器?variant=zh-cn"
                         target="_blank"
                         >知道了服务器IP地址，怎么游玩?(Java)↗</a
                     >
                 </p>
                 <p>
                     <a
-                        href="https://minecraft.fandom.com/zh/wiki/%E6%95%99%E7%A8%8B/%E4%B8%8B%E8%BD%BD%E3%80%81%E5%AE%89%E8%A3%85%E4%B8%8E%E8%B4%AD%E4%B9%B0"
+                        href="https://zh.minecraft.wiki/wiki/%E6%95%99%E7%A8%8B/%E4%B8%8B%E8%BD%BD%E3%80%81%E5%AE%89%E8%A3%85%E4%B8%8E%E8%B4%AD%E4%B9%B0"
                         target="_blank"
                         >如何获取Minecraft？↗</a
                     >
@@ -664,9 +664,17 @@
             </p>
             <p>
                 <a
-                    href="https://minecraft.fandom.com/zh/wiki/Minecraft_Wiki"
+                    href="images/pay.jpg"
                     target="_blank"
-                    >↗Minecraft Wiki</a
+                    style="color: #1976d2"
+                    >💰资助本站(您的资助都将用于游戏服务器维护!)</a
+                >
+                <hr style="height: 0.1em;margin: 0%;"/>
+                <a
+                    href="https://zh.minecraft.wiki/wiki/Minecraft_Wiki"
+                    target="_blank"
+                    style="color: #757575"
+                    >友情链接：↗Minecraft Wiki</a
                 >
             </p>
         </article>
