--- a/404.html
+++ b/404.html
@@ -588,7 +588,8 @@
                 y="0px"
                 viewBox="0 0 375 177"
                 style="enable-background: new 0 0 375 177"
-                xml:space="preserve">
+                xml:space="preserve"
+                align="center">
                 <style type="text/css">
                     .st0 {
                         fill: none;
@@ -674,9 +675,10 @@
                     x2="218.59"
                     y2="87.74" />
             </svg>
+            <!--
             <h4>
                 <a href="/index.html" style="color: #3977ff;">前往网站导航↗</a>
-            </h4>
+            </h4> -->
         </article>
     </body>
 </html>
